fix background contrast

--- a/80-health dashboard/style.css
+++ b/80-health dashboard/style.css
@@ -63,7 +63,7 @@ p {
 }
 
 .bg2 {
-  background-image: url("https://images.unsplash.com/reserve/YEc7WB6ASDydBTw6GDlF_antalya-beach-lulu.jpg?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1463&q=80");
+  background: var(--text-color) url("https://images.unsplash.com/photo-1529686159790-3246c5082afb?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80");
   color: var(--dark-text-color);
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
 }
